--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/index.css" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Card 3D</title>
+    <title>Vortex Demo App</title>
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
